# errorium

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
errorium/: Cargo.toml
errorium-derive/: Cargo.toml
errorium-derive/src/: lib.rs  utils.rs
errorium-macro/: Cargo.toml
errorium-macro/src/: error.rs  errors_macro.rs  lib.rs  macro_tags.rs  tags_macro.rs  utils.rs
errorium/src/: errors.rs  lib.rs
errorium/tests/: basic.rs  error.rs  errors.rs  tags_result.rs  tags_type.rs
