[workspace]
resolver = "2"
members = [
    "errorium",
    "errorium-macro"
]


[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Alex Pozhylenkov <leshiy12345678@gmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
warnings = "deny"
missing_docs = "deny"
let_underscore_drop = "deny"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"

[workspace.lints.clippy]
pedantic = "deny"
unwrap_used = "deny"
expect_used = "deny"
exit = "deny"
get_unwrap = "deny"
index_refutable_slice = "deny"
indexing_slicing = "deny"
match_on_vec_items = "deny"
match_wild_err_arm = "deny"
missing_panics_doc = "deny"
panic = "deny"
string_slice = "deny"
unchecked_duration_subtraction = "deny"
unreachable = "deny"

[workspace.dependencies]
errorium = { path = "errorium" }
errorium-macro = { path = "errorium-macro" }

syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
thiserror = "1.0.61"
anyhow = "1.0.86"
